# ModbusScope

./: .clang-format  .clang-tidy  .codacy.yaml  .coderabbit.yaml  .codespellrc  .gitignore  .gitmodules  .markdownlint.json  .readthedocs.yml  .sonarcloud.properties  .travis.yml  CHANGELOG.md  CLAUDE.md  CMakeLists.txt  Features_Notes_questions.txt  ModbusScope.code-workspace  ModbusScope.pri  ModbusScope.pro  NotOnlyModbusScope.code-workspace  README.md  RELEASE_NOTES.md  SECURITY.md  appveyor.yml  conanfile.txt  create_doc.sh  dfetch.yaml  libmodbus_update.txt  modbusscope.desktop  process_coverage.sh  resources.qrc  sonar-project.properties  tests.pro  tests_integration.pro  tests_unit.pro
adapters/: CHANGELOG.md  CMakeLists.txt  THIRD_PARTY_LICENSES.md  describe.json  dummymodbusadapter  json-rpc-spec.md  modbus-adapter-spec.md  modbusadapter
libraries/qcustomplot/: .dfetch_data.yaml  CMakeLists.txt  README.md  changelog.txt  qcustomplot.cpp  qcustomplot.h
src/: CMakeLists.txt  ModbusMaster.cpp  ModbusMaster.h  ModbusThread.cpp  ModbusThread.h  basicgraphview.cpp  basicgraphview.h  communicationmanager.cpp  communicationmanager.h  connectiondialog.cpp  connectiondialog.h  connectiondialog.ui  connectionmodel.cpp  connectionmodel.h  datafileexporter.cpp  datafileexporter.h  datafileparser.cpp  datafileparser.h  extendedgraphview.cpp  extendedgraphview.h  graphdata.h  guimodel.cpp  guimodel.h  logdialog.cpp  logdialog.h  logdialog.ui  logmodel.cpp  logmodel.h  main.cpp  mainapp.cpp  mainapp.h  mainwindow.cpp  mainwindow.h  mainwindow.ui  modbusmaster.cpp  modbusmaster.h  modbusscope.cpp  modbusscope.h  modbussettings.cpp  modbussettings.h  (+20 more)
src/MbcInterface/: mbcdatatype.cpp  mbcdatatype.h  mbcfileimporter.cpp  mbcfileimporter.h  mbcheader.h  mbcregisterdata.cpp  mbcregisterdata.h  mbcregisterfilter.cpp  mbcregisterfilter.h  mbcregistermodel.cpp  mbcregistermodel.h  mbcupdatemodel.cpp  mbcupdatemodel.h  modbusdatatype.cpp  modbusdatatype.h
src/ProtocolAdapter/: adapterclient.cpp  adapterclient.h  adapterdiscovery.cpp  adapterdiscovery.h  adapterhub.cpp  adapterhub.h  adaptermanager.cpp  adaptermanager.h  adapterprocess.cpp  adapterprocess.h  framingreader.cpp  framingreader.h
src/communication/: adapterpoll.cpp  adapterpoll.h  communicationmanager.cpp  communicationmanager.h  communicationstats.cpp  communicationstats.h  datapoint.cpp  datapoint.h  expressionparser.cpp  expressionparser.h  graphdatahandler.cpp  graphdatahandler.h  modbusconnection.cpp  modbusconnection.h  modbusdatatype.cpp  modbusdatatype.h  modbusdataunit.cpp  modbusdataunit.h  modbusmaster.cpp  modbusmaster.h  modbuspoll.cpp  modbuspoll.h  modbusregister.cpp  modbusregister.h  modbusresult.cpp  modbusresult.h  modbusresultmap.h  readregisters.cpp  readregisters.h  registervaluehandler.cpp  registervaluehandler.h  result.cpp  result.h
src/controllers/: scopecontroller.cpp  scopecontroller.h
src/customwidgets/: actionbuttondelegate.cpp  actionbuttondelegate.h  addabletabwidget.cpp  addabletabwidget.h  centeredbox.h  clickablelabel.cpp  clickablelabel.h  connectionform.cpp  connectionform.h  connectionform.ui  deviceconfigtab.cpp  deviceconfigtab.h  deviceform.cpp  deviceform.h  deviceform.ui  expressiondelegate.cpp  expressiondelegate.h  legend.cpp  legend.h  legenditem.cpp  legenditem.h  markerinfo.cpp  markerinfo.h  markerinfoitem.cpp  markerinfoitem.h  mostrecentmenu.cpp  mostrecentmenu.h  notesdock.cpp  notesdock.h  notesdockwidget.cpp  notesdockwidget.h  notesdockwidget.ui  overlaylabel.cpp  overlaylabel.h  scaledock.cpp  scaledock.h  scaledock.ui  schemaformwidget.cpp  schemaformwidget.h  serialportcombo.cpp  (+5 more)
src/datahandling/: expressionparser.cpp  expressionparser.h  graphdatahandler.cpp  graphdatahandler.h  muparserregister.cpp  qmuparser.cpp  qmuparser.h
src/dialogs/: aboutdialog.cpp  aboutdialog.h  aboutdialog.ui  adapterconnectionsettings.cpp  adapterconnectionsettings.h  adapterdevicesettings.cpp  adapterdevicesettings.h  adaptersettings.cpp  adaptersettings.h  addregisterdialog.cpp  addregisterdialog.h  addregisterdialog.ui  addregisterwidget.cpp  addregisterwidget.h  addregisterwidget.ui  connectiondelegate.cpp  connectiondelegate.h  connectiondialog.cpp  connectiondialog.h  connectiondialog.ui  connectionsettings.cpp  connectionsettings.h  connectionsettings.ui  devicesettings.cpp  devicesettings.h  devicesettings.ui  diagnosticdialog.cpp  diagnosticdialog.h  diagnosticdialog.ui  errorlogdialog.cpp  errorlogdialog.h  errorlogdialog.ui  expressioncomposedelegate.cpp  expressioncomposedelegate.h  expressionhighlighting.cpp  expressionhighlighting.h  expressionsdialog.cpp  expressionsdialog.h  expressionsdialog.ui  graphmenucontroller.cpp  (+47 more)
src/graphview/: axistickertime.cpp  axistickertime.h  basicgraphview.cpp  basicgraphview.h  extendedgraphview.cpp  extendedgraphview.h  graphindicators.cpp  graphindicators.h  graphmarkers.cpp  graphmarkers.h  graphscaling.cpp  graphscaling.h  graphview.cpp  graphview.h  graphviewmarkers.cpp  graphviewmarkers.h  graphviewzoom.cpp  graphviewzoom.h  myqcpaxis.cpp  myqcpaxis.h  myqcpaxistickertime.cpp  myqcpaxistickertime.h  myqcpgraph.cpp  myqcpgraph.h  myqcustomplot.cpp  myqcustomplot.h  notehandling.cpp  notehandling.h  noteitem.cpp  noteitem.h  scopeplot.cpp  scopeplot.h  valueaxis.cpp  valueaxis.h
src/importexport/: datafileexporter.cpp  datafileexporter.h  datafilehandler.cpp  datafilehandler.h  datafileparser.cpp  datafileparser.h  diagnosticexporter.cpp  diagnosticexporter.h  generalerror.h  mbcfileimporter.cpp  mbcfileimporter.h  mbcregisterdata.cpp  mbcregisterdata.h  presethandler.cpp  presethandler.h  presetparser.cpp  presetparser.h  projectfiledata.h  projectfiledefinitions.h  projectfileexporter.cpp  projectfileexporter.h  projectfilehandler.cpp  projectfilehandler.h  (+16 more)
tests/: CMakeLists.txt  main.cpp  tst_readregisters.h  tst_testcase.h
tests_unit/: CMakeLists.txt  gtest_dependency.pri  main.cpp  mockgraphdatamodel.h  tests_unit.pro  tst_errorlog.h  tst_errorlogmodel.h  tst_graphdata.h  tst_mbcregistermodel.h  tst_readregisters.h
(+843 files in other folders)
